# spin-qr-generator

./: Cargo.toml  README.md  spin.toml
.github/workflows/: build.yaml  release.yaml
qr-generator/: Cargo.toml  cargo.toml
qr-generator/src/: lib.rs
src/: lib.rs
templates/qr-generator/content/: spin.toml
templates/qr-generator/metadata/: spin-template.toml
templates/qr-generator/metadata/snippets/: component.txt
