[package]
name = "qr-discord"
authors = ["Mikkel Mørk Hegnhøj <mikkel@fermyon.com>"]
description = "QR Code for Discord"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
percent-encoding = "2.2.0"
qrcode-generator = "4.1.7"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.9.0" }
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]
